--- a/src/app/equipment/equipment.component.css
+++ b/src/app/equipment/equipment.component.css
@@ -12,7 +12,14 @@ h3 {
     text-align: center;
 }
 
-/* Add an 'active' class to style the background of the 'Add to Cargo Hold' buttons. */
-
+.active {
+    background-color: greenyellow;
+}
 
 /* Add the 'nearMaxMass' class style here: */
+.nearMaxMass {
+    font-style: italic;
+    color: red;
+}
+
+
